--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <div class="header-right">
                     <a href="./shopping-cart.html">
                         <img src="img/icons/bag.png" alt="">
-                        <span>2</span>
+                        <span class="header-cart-counter">0</span>
                     </a>
                 </div>
 
