--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="header-right">
                     <a href="./shopping-cart.html">
                         <img src="img/icons/bag.png" alt="">
-                        <span>2</span>
+                        <span class="header-cart-counter">0</span>
                     </a>
                 </div>
 
@@ -119,7 +119,7 @@
     <!-- Latest Product Begin -->
     <section class="latest-products spad">
         <div class="container">
-            <div class="row">
+            <div class="row home-page-products">
                 <div class="col-lg-3 col-sm-6 ">
                     <div class="single-product-item">
                         <figure>
