--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -78,27 +78,15 @@
                             <th>Total</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td class="product-col">
-                                <img src="img/product/product-1.jpg" alt="">
-                                <div class="p-title">
-                                    <h5>Blue Dotted Shirt</h5>
-                                </div>
-                            </td>
-                            <td class="price-col">$29</td>
-                            <td class="price-col">
-                                1
-                            </td>
-                            <td class="total">$29</td>
-                        </tr>
+                    <tbody class="cart-table-body">
+                        
                     </tbody>
                 </table>
             </div>
             <div class="cart-btn">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="site-btn clear-btn">Clear Cart</div>
+                        <div class="site-btn clear-btn clear-cart-btn">Clear Cart</div>
                     </div>
                 </div>
             </div>
@@ -117,12 +105,8 @@
                                             <th class="total-cart">Total Cart</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td class="total">$29</td>
-                                            <td class="sub-total">$29</td>
-                                            <td class="total-cart-p">$39</td>
-                                        </tr>
+                                    <tbody class="cart-totals">
+                                      
                                     </tbody>
                                 </table>
                             </div>
