--- a/product-page.html
+++ b/product-page.html
@@ -45,7 +45,7 @@
 
                 <nav class="main-menu mobile-menu">
                     <ul>
-                        <li><a class="active" href="./index.html">Home</a></li>
+                        <li><a  href="./index.html">Home</a></li>
                         <li><a href="./shop.html">Shop</a></li>
                         <li><a href="./contact.html">contact</a></li>
                     </ul>
