--- a/shop.html
+++ b/shop.html
@@ -45,8 +45,8 @@
 
                 <nav class="main-menu mobile-menu">
                     <ul>
-                        <li><a class="active" href="./index.html">Home</a></li>
-                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a  href="./index.html">Home</a></li>
+                        <li><a class="active" href="./shop.html">Shop</a></li>
                         <li><a href="./contact.html">contact</a></li>
                     </ul>
                 </nav>
